--- a/TipOfTheDay-Core3/TipOfTheDay/Views/Tag/Edit.cshtml
+++ b/TipOfTheDay-Core3/TipOfTheDay/Views/Tag/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model TipOfTheDay.Models.Tip
+﻿@model TipOfTheDay.Models.Tag
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,17 +6,17 @@
 
 <h1>Edit</h1>
 
-<h4>Tip</h4>
+<h4>Tag</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="TipID" />
+            <input type="hidden" asp-for="TagID" />
             <div class="form-group">
-                <label asp-for="TipText" class="control-label"></label>
-                <input asp-for="TipText" class="form-control" />
-                <span asp-validation-for="TipText" class="text-danger"></span>
+                <label asp-for="Category" class="control-label"></label>
+                <input asp-for="Category" class="form-control" />
+                <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
