--- a/TipOfTheDay-Core3/TipOfTheDay/Views/Home/Index.cshtml
+++ b/TipOfTheDay-Core3/TipOfTheDay/Views/Home/Index.cshtml
@@ -5,4 +5,8 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>
+        <a asp-controller="Tip">Manage Tips</a><br />
+        <a asp-controller="Tag">Manage Tags</a>
+    </p>
 </div>
